# asetate

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  render-build.sh  render.yaml  requirements.txt  wsgi.py
asetate/: __init__.py  cli.py  config.py
asetate/models/: __init__.py  crate.py  emoji_icons.py  export_preset.py  inventory_listing.py  pixel_icons.py  release.py  sync_progress.py  tag.py  track.py  user.py
asetate/routes/: __init__.py  auth.py  crates.py  export.py  main.py  releases.py  sync.py  tags.py
asetate/services/: __init__.py  backup.py  discogs.py  sync.py
asetate/static/css/: style.css
asetate/static/emoji/: README.md
asetate/static/icons/: README.md
asetate/static/js/: app.js  icons.js
asetate/templates/: _icons.html  base.html  index.html
asetate/templates/auth/: settings.html
asetate/templates/crates/: detail.html  list.html
asetate/templates/export/: index.html
asetate/templates/releases/: detail.html  list.html  panel.html
asetate/templates/sync/: status.html
asetate/utils/: __init__.py  encryption.py
migrations/: env.py
migrations/versions/: 001_add_inventory_fields.py  002_add_sync_progress_current_release.py  003_add_release_notes_field.py  004_add_release_metadata_fields.py  005_add_catno_field.py
scripts/: download-emoji.sh  seed_demo_data.py
tests/: __init__.py  conftest.py
